# Nojoin

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .trivyignore  AGENTS.md  CNAME  CONTRIBUTING.md  LEGAL.md  LICENSE  Nojoin-Inno-SetupScript.iss  Nojoin.py  PRD.md  README.md  Start Nojoin.bat  TODO.md  UPLOAD_FIX_SUMMARY.md  VERSION  _config.yml  debug_ffmpeg.py  docker-compose.cpu.yml  docker-compose.example.yml  docker-compose.gpu.yml  docker-compose.yml  inspect_pyannote.py  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup_mac.sh  setup_windows.bat  start_nojoin_mac.sh  verify_export.py
.antigravitycli/: dc1cf161-091d-4ea5-9f28-65cc8ebf498a.json
.cursor/rules/: Cookbook.mdc
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  copilot-instructions.md  dependabot.yml  labels.yml  release-notes-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  platform_report.md
.github/workflows/: build-companion.yml  ci.yml  claude-review.yml  companion-tauri.yml  docker-publish.yml  release.yml  repo-audit-reminder.yml  sync-wiki.yml
_includes/: head-custom.html
_layouts/: default.html
assets/css/: style.scss
backend/: __init__.py  celery_app.py  create_first_user.py  entrypoint.sh  init_db.py  main.py  preload_models.py  seed_demo.py  startup_canonical_cutover.py  startup_migrations.py  worker_entrypoint.sh
backend/alembic/: env.py
backend/api/: deps.py  error_handling.py
backend/core/: audio_setup.py  backup_manager.py  companion_identity.py  db.py  encryption.py  exceptions.py  security.py
backend/mcp_server/: __init__.py  auth.py  server.py
backend/models/: base.py  calendar.py  chat.py  companion_pairing.py  companion_pairing_request.py  context_chunk.py  document.py  invitation.py  oauth.py  people_tag.py  people_tag_schemas.py  pipeline.py  recording.py  recording_public.py  registry.py  revoked_jwt.py  speaker.py  tag.py  task.py  transcript.py  user.py
backend/processing/: LLM_Services.py  audio_preprocessing.py  browser_live_audio.py  diarize.py  diarize_subprocess_entry.py  embedding.py  embedding_core.py  live_transcribe.py  llm_services.py  phantom_filter.py  pipeline.py  pipeline_metrics.py  segment_transcode.py  segmentation_refinement.py  snippet_extractor.py  speaker_merge.py  text_embedding.py  transcribe.py  vad.py
backend/services/: calendar_link_service.py  calendar_service.py  companion_frontend_events.py  companion_pairing_service.py  jwt_revocation_service.py  model_preparation.py  recording_identity_service.py
backend/tests/: conftest.py  test_asr_window_results.py  test_audio_io.py  test_auth_security.py  test_automatic_meeting_intelligence_worker.py  test_backup_compatibility.py  test_backup_manager.py  test_browser_session_origin_protection.py  test_calendar_and_task_api.py  test_calendar_event_linking.py  test_calendar_service.py  test_canonical_transcript_phase1.py  test_companion_auth_rate_limits.py  test_companion_pairing_contract.py  test_config_manager_cleanup.py  test_config_validation.py  test_container_logs_security.py  test_deployment_warnings.py  test_dynamic_confidence.py  test_embedding_audio_selection.py  test_endpoint_route_contracts.py  test_generate_notes_task.py  test_health_service.py  test_infer_speakers_task.py  test_inference_work_remediation.py  test_installed_version.py  test_invitation_role_security.py  test_jwt_keyring.py  test_jwt_revocation_service.py  test_languages.py  test_live_transcript_reuse.py  test_live_transcription.py  test_llm_config.py  test_llm_services_unified.py  test_logging_redaction.py  (+40 more)
bundled_models/: README.md
companion/: Cargo.toml  build.rs  config.example.json  package-lock.json  package.json
companion/installer/: README.md  build.ps1  installer.nsi
companion/scripts/: build-with-dmg.js  package-portable.js
companion/scripts/support/: eula-resources-template.xml
companion/src/: audio.rs  config.rs  index.html  main.rs  notifications.rs  pairing.html  server.rs  settings.html  state.rs  updater.rs  uploader.rs
companion/src-tauri/: Cargo.toml  Info.plist  LICENSE_DISCLAIMER.txt  build.rs  bundle_dmg_patched.sh  entitlements.plist  tauri.conf.json
companion/src-tauri/capabilities/: desktop.json  migrated.json
companion/src-tauri/icons/: icon.icns
companion/src-tauri/nsis/: installer.nsi
companion/src-tauri/src/: audio.rs  backend_url.rs  companion_auth.rs  config.rs  linux_notifications.rs  local_https_identity.rs  log_redact.rs  mac_notifications.rs  mac_sc.rs  main.rs  notifications.rs  pairing_link.rs  secret_store.rs  server.rs  state.rs  tls.rs  uploader.rs  win_notifications.rs
docker/: Dockerfile  Dockerfile.api  Dockerfile.worker  init-ssl.sh
docs/: ADMIN.md  AGENTS.md  ARCHITECTURE.md  Audit_Findings.md  BACKUP_RESTORE.md  BeamCloud.md  CALENDAR.md  CAPTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPANION.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  Home.md  How-to-Configure-Nojoin.md  LEGAL.md  LIVE_PIPELINE_OVERHAUL.md  MCP.md  Managing-Meeting-Participants.md  Nojoin-Development-Instructions.md  PLAN.md  PRD.md  README.md  Rules.md  SCREENSHOTS.md  SECURITY.md  TODO.md  Tauri-Transition.md  UNIFIED_LLM_PROCESSING_PLAN.md  UPLOAD_FAILURE_ANALYSIS.md  UPLOAD_SEGMENTATION.md  USAGE.md  Using-the-Global-Speaker-Library.md  audio-capture-refactor.md  code-audit.md  electron-plan.md  git-commit-desc.md  gitmessage.md  https_upgrade.md  (+8 more)
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
models/: pyannote_diarization_config.yaml
nginx/: nginx.conf
nojoin/: __version__.py  last_update_check.json
requirements/: backend.txt  base.txt  dev.txt  lint.txt  local.txt  test.txt  worker.txt
scripts/: check.py  check_fast.py  check_file_size.py  check_whitespace.py  render_release_notes.py  sync-version.js  test-rate-limit.sh  validate_alembic.py  validate_docs.py  vendor_pyannote_models.py
tests/: test_model_download_integration.py  test_progress_manager.py
(+475 files in other folders)
