[package]
name = "nojoin-companion"
version = "0.1.1"
edition = "2021"
description = "A lightweight system tray companion app for Nojoin meeting intelligence"
authors = ["Valtora"]
license = "MIT"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"
hound = "3.5"
anyhow = "1.0"
notify-rust = "4"
tray-icon = "0.14"
tao = "0.28"
chrono = "0.4"
crossbeam-channel = "0.5"
parking_lot = "0.12"
image = "0.24"
open = "5.0"
log = "0.4"
fern = "0.7"

[build-dependencies]
winres = "0.1"

[package.metadata.deb]
maintainer = "Valtora"
copyright = "2024, Valtora"
extended-description = "Nojoin Companion captures system audio and microphone input for transcription and meeting intelligence."
depends = "$auto"
section = "sound"
priority = "optional"
assets = [
    ["target/release/nojoin-companion", "usr/bin/", "755"],
    ["installer/icon.ico", "usr/share/icons/hicolor/256x256/apps/nojoin-companion.ico", "644"]
]
