[package]
name = "nojoin-companion"
version = "0.1.4"
description = "A lightweight system tray companion app for Nojoin meeting intelligence"
authors = ["Valtora"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
cpal = "0.15"
hound = "3.5"
anyhow = "1.0"
chrono = "0.4"
crossbeam-channel = "0.5"
parking_lot = "0.12"
image = "0.24"
log = "0.4"
fern = "0.7"
directories = "5.0"
open = "5.0"
tauri-plugin-autostart = { version = "2" }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

[target.'cfg(windows)'.dependencies]
win32_notif = "0.10.2"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
