[package]
name = "nojoin-companion"
version = "0.9.1"
description = "A lightweight system tray companion app for Nojoin meeting intelligence"
authors = ["Valtora"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
hyper-util = { version = "0.1.20", features = ["server-auto", "service", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
sha2 = "0.10"
base64 = "0.22"
cpal = "0.15"
hound = "3.5"
anyhow = "1.0"
chrono = "0.4"
crossbeam-channel = "0.5"
parking_lot = "0.12"
image = "0.24"
log = "0.4"
fern = "0.7"
directories = "5.0"
open = "5.0"
rand = "0.8"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rcgen = { version = "0.14.7", features = ["x509-parser"] }
time = "0.3"
tauri-plugin-autostart = { version = "2" }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
x509-parser = "0.18"

[target.'cfg(windows)'.dependencies]
win32_notif = "0.10.2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
